<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.unh.washbuddy_android.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_newOrder1Fragment"
            app:destination="@id/newOrder1Fragment" />
    </fragment>


    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.unh.washbuddy_android.ui.orders.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" >
        <action
            android:id="@+id/action_navigation_orders_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_orders_to_viewOrderFragment"
            app:destination="@id/viewOrderFragment" />
        <action
            android:id="@+id/action_navigation_orders_to_reorderFragment2"
            app:destination="@id/reorderFragment2" />
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.unh.washbuddy_android.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/newOrder1Fragment"
        android:name="com.unh.washbuddy_android.ui.home.NewOrder1Fragment"
        android:label="fragment_new_order1"
        tools:layout="@layout/fragment_new_order1" >
        <action
            android:id="@+id/action_newOrder1Fragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/viewOrderFragment"
        android:name="com.unh.washbuddy_android.ui.orders.ViewOrderFragment"
        android:label="ViewOrderFragment" >
        <action
            android:id="@+id/action_viewOrderFragment_to_navigation_orders"
            app:destination="@id/navigation_orders" />
    </fragment>
    <fragment
        android:id="@+id/reorderFragment2"
        android:name="com.unh.washbuddy_android.ui.orders.ReorderFragment"
        android:label="ReorderFragment" >
        <action
            android:id="@+id/action_reorderFragment2_to_navigation_orders"
            app:destination="@id/navigation_orders" />
    </fragment>
</navigation>